# ai-resume

./: .gitignore  README.md  TEST_CONFIGS_REFERENCE.md  TEST_GUIDE.md  TEST_RESULTS.md  UPDATED_WORKFLOW_GUIDE.md  WORKFLOW.md  build.sh  create_job_folder.sh  job_prompt.jinja  new_resume.sh  pyproject.toml  resume_ai_creator.py  run_workflow.py  workflow_config.yaml
fetch_job/: README.md  job_search.py  pyproject.toml  run.sh  setup.sh
job_search_output/test/: test_jobs_minimal.json
