[tool.poetry]
name = "resume-ai-creator"
version = "0.1.0"
description = "AI-powered resume tailoring tool using Claude"
authors = ["Rakshit Makan"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^3.1.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
